# halo-bridge

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/halo_bridge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/halo_bridge/source/: halo.py
src/halo_bridge/targets/: __init__.py  cnblogs.py  csdn.py  modb.py
src/halo_bridge/transforms/: copyright.py  image_urls.py  meta_referrer.py
